fix: 🐛 z-index for stage component

--- a/src/components/stage/stage.styles.scss
+++ b/src/components/stage/stage.styles.scss
@@ -7,7 +7,7 @@ $gridSpacing: 56px;
 	position: fixed;
 	left: 0;
 	top: 0;
-	z-index: 100;
+	z-index: 20;
 	width: 40vw;
 	height: 100vh;
 	background-color: $primary;
